--- a/assets/css/main/contato.css
+++ b/assets/css/main/contato.css
@@ -6,11 +6,6 @@
     gap: 1rem;
 }
 
-#div-contato h2{
-    color: #f5ab18ff;
-    font-size: 1.7rem;
-}
-
 #info-contato{
     width: 70vw;
     display: flex;
@@ -35,7 +30,7 @@
     margin-right: 10px;
     border-radius: 50%;
     display: inline-block;
-    background-color: #f5ab18ff;
+    background-color: var(--color-yellow);
 }
 
 @media (min-width: 770px){
