--- a/assets/css/modal/modal.css
+++ b/assets/css/modal/modal.css
@@ -33,8 +33,8 @@
 #div-modal{
     width: 75%;
     padding: 2rem 1rem;
-    background-color: #fff;
-    border: 5px solid #f5ab18ff;
+    background-color: var(--color-light);
+    border: 5px solid var(--color-yellow);
     border-radius: 4px;
     position: relative;
 }
@@ -43,18 +43,18 @@
     position: absolute;
     top: 0;
     right: 0;
-    font-size: 2.3rem;
+    font-size: var(--fs-h1);
 }
 
 #modal-form{
-    height: 150px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 #modal-form label{
-    font-size: 1.1rem;
+    font-size: var(--fs-md);
 }
 
 #modal-form input{
@@ -62,15 +62,15 @@
     margin-bottom: 1rem;
     border-radius: 4px;
     outline: none;
-    border: 1px solid #000;
+    border: 1px solid var(--color-dark);
 }
 
 #modal-form button{
     align-self: center;
     width: 50%;
     padding: .3rem 0;
-    font-size: 1.1rem;
-    background-color: #E54;
+    font-size: var(--fs-md);
+    background-color: var(--color-orange);
     border: none;
     border-radius: 4px;
     cursor: pointer;
