melhorando e adicionando novas funcoes

--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -70,3 +70,15 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+/*Animacao ao Scroll*/
+.js [data-animacao="scroll"]{
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+    transition: .3s;
+}
+
+.js [data-animacao="scroll"].scroll-ativo{
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+}
