--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 @import './main/mainContainer.css';
 @import './main/sobre.css';
 @import './main/cardapio.css';
+@import './main/galeria.css';
 @import './main/perguntas.css';
 @import './main/contato.css';
 @import './footer/footer.css';
